Fixed scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-rgb: 255, 250, 250;
+  --background-rgb: 255, 254, 249;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -30,6 +30,10 @@ h1 {
 }
 
 h2 {
+  font-size: 3rem;
+}
+
+h3 {
   font-size: 1.5rem;
 }
 
